Fixed CSS
Got rid of header tags, organized CSS, made gutters smaller for large display and changed some containers to ensure no content spills out of the side. :)

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
-    4.0 - GENERIC
+    3.0 - GENERIC
 -------------------------------------------------------------- */
 /* ----- UNIVERSAL ----- */
 
@@ -58,6 +58,12 @@ h2{
         font-size: 2.25rem;
 }
 
+
+/*--------------------------------------------------------------
+    5.0 - OBJECTS
+-------------------------------------------------------------- */
+
+
 /* ----- FRAMEWORK ----- */
 
 .wrapper{
@@ -75,17 +81,11 @@ h2{
         max-width: 100%;
 }
 
-.row:last-child{
-        justify-content: center;
-}
-
 [class*='col-'] div{            /* explicit to ex7 */
         background-color: #D9D9D9;
         height: 100%;
         padding: 10px;
 }
-
-
 
 [class*='col-']{
         padding: 10px 5px;
@@ -155,7 +155,7 @@ h2{
         }
 
         [class*='col-']{
-                padding: 10px;
+                padding: 8px;
         }
 
         .col-md-1 {
@@ -212,11 +212,11 @@ h2{
 @media screen and (min-width: 1024px){
 
         .wrapper{
-                width: 75%;
+                width: 70%;
         }
 
         [class*='col-']{
-                padding: 15px;
+                padding: 10px;
         }
 
         .col-lg-1 {
@@ -265,13 +265,12 @@ h2{
         
         .col-lg-12 {
                 width: calc(100% * 12/ 12);
-        }
-
-        
+        }        
 }
 
+
 /*--------------------------------------------------------------
-    4.0 - COMPONENTS
+    6.0 - COMPONENTS
 -------------------------------------------------------------- */
 
 #bg-hand{
@@ -282,4 +281,8 @@ h2{
         -ms-background-size: cover;
         background-size: cover;
         background-clip: content-box;
+}
+
+.row:last-child{
+        justify-content: center;
 }
